<resources>
    <string name="app_name">GreenTech</string>
    <string name="ask">If There is any Other Product is Needed Ask Here</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="for_door_delivery">for Door delivery</string>
    <string name="for_extra_product">For Extra product</string>
    <string name="purchase">Purchase</string>
    <string name="product_name">Product name</string>
    <string name="ask_1">ASK</string>
    <string name="user_name">User Name</string>
    <string name="address">Address</string>
    <string name="for_contact_number">For Contact Number</string>
    <string name="order_now">order now</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="dont_have_an_account">Dont Have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="product_cost_per_kg">Product cost per kg</string>
    <string name="product_total_weight">Product total Weight</string>
    <string name="farmer_contact_number">Farmer Contact Number</string>
    <string name="submit">submit</string>
    <string name="farmer_email_id">Farmer Email ID</string>
    <string name="farmer_password">Farmer Password</string>
    <string name="farmer_adhar_card_number">Farmer Adhar Card Number</string>
    <string name="farmer_address">Farmer Address</string>
    <string name="register">Register</string>
    <string name="view">View</string>
    <string name="law1">Department of Agriculture , Cooperation and farmers wellfare</string>
    <string name="law2">Ministry of Agriculture and farmers wellfare</string>
    <string name="law3"><![CDATA[Department of Agriculture, Cooperation and farmers wellfare & new Initiatives]]></string>
    <string name="farmer">Farmer</string>
    <string name="user">User</string>
    <string name="government_schemes">Government Schemes</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="adhar_card_number">Adhar Card Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="buy">buy</string>
    <string name="edit">Edit</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="settings">settings</string>
    <string-array name="item">
        <item>Select Language</item>
        <item>English</item>
        <item>Tamil</item>
        <item>Malayalam</item>
    </string-array>
</resources>