<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfferActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/screenbg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/oproductname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/product_name"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/ofarmername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/farmer_name"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/oproductcost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/product_cost_per_kg"
            android:inputType="number"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/oproductweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/product_total_weight"
            android:inputType="number"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/ofarnernumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/farmer_contact_number"
            android:inputType="number"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/osubmitproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btbg"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>