<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lllbg"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="9"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/emaillogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/editbg"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:gravity="center"
            android:hint="@string/email_id"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/passlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:background="@drawable/editbg"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_security_black_24dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:hint="@string/password"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/loginbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btbg"
            android:text="@string/login"
            android:padding="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>