<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lllbg"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".FarmerLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="center"
        android:gravity="center"

        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/Femaillogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/editbg"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:gravity="center"
                android:hint="@string/email_id"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/Fpasslogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/editbg"
                android:drawableLeft="@drawable/ic_security_black_24dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/Floginbt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btbg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="4"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/Fsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/sign_up"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>